CDI-50 Tidy up warnings and exceptions handling